--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image CI Build
 
 on:
     push:
@@ -9,16 +9,22 @@ jobs:
     buildImage:
         runs-on: ubuntu-latest
         env:
-            REGISTRY: docker.pkg.github.com
-            REPOSITORY: docker.pkg.github.com/marjamis/config-image-puller
+            REPOSITORY: ghcr.io/marjamis/config-image-puller
 
         steps:
-            - uses: actions/checkout@master
-            - name: Build the Docker image
-              run: |
-                  docker build . --file Dockerfile --tag $REPOSITORY:latest
-                  docker tag $REPOSITORY:latest $REPOSITORY:$(date +%s)
-            - name: Push image to Github Package Registry
-              run: |
-                  docker login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} $REGISTRY
-                  docker push -a $REPOSITORY
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
+
+            - name: Login to GitHub
+              uses: docker/login-action@v2
+              with:
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Build and push to Github Package Registry
+              uses: docker/build-push-action@v3
+              with:
+                  push: true
+                  tags: |
+                      ${{ REPOSITORY }}:latest
+                      ${{ REPOSITORY }}:$(date +%s)
