--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -8,8 +8,6 @@ on:
 jobs:
     buildImage:
         runs-on: ubuntu-latest
-        env:
-            REPOSITORY: ghcr.io/marjamis/config-image-puller
 
         steps:
             - name: Set up Docker Buildx
@@ -26,5 +24,5 @@ jobs:
               with:
                   push: true
                   tags: |
-                      ${{ REPOSITORY }}:latest
-                      ${{ REPOSITORY }}:$(date +%s)
+                      ghcr.io/marjamis/config-image-puller:latest
+                      ghcr.io/marjamis/config-image-puller:$(date +%s)
