--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -10,6 +10,10 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - name: "Sets the date value"
+              id: set_date
+              run: "::set-output name=current_date::$(date +%s)"
+
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v2
 
@@ -26,4 +30,4 @@ jobs:
                   push: true
                   tags: |
                       ghcr.io/marjamis/config-image-puller:latest
-                      ghcr.io/marjamis/config-image-puller:$(date +%s)
+                      ghcr.io/marjamis/config-image-puller:${{ steps.set_date.outputs.current_date }}
