ci: :green_heart: Added a missing echo to the set_date step in build-image.yml

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -12,7 +12,7 @@ jobs:
         steps:
             - name: "Sets the date value"
               id: set_date
-              run: "::set-output name=current_date::$(date +%s)"
+              run: echo "::set-output name=current_date::$(date +%s)"
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v2
